--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -17,8 +18,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-id-swiper": "^4.0.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.21.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.5"
