--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.21.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.2",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
