--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.0",
+    "axios": "^1.6.3",
     "firebase": "^10.7.1",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
